common/resources/nginx-deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
spec:
  replicas: 3
  selector:
    matchLabels:
        app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      containers:
      - name: nginx-web
        image: nginx
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
          - name: web
            containerPort: 80
