common/resources/nginx-deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-webdemo
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: waf.diydevsec.local
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
            path: /

# This section is only required if TLS is to be enabled for the Ingress
# tls:
# - hosts:
# - www.example.com
# secretName: example-tls
#
#If TLS is enabled for the Ingress, a Secret containing the certificate and key must also be provided:
#
# apiVersion: v1
# kind: Secret
# metadata:
#   name: example-tls
#   namespace: foo
# data:
#   tls.crt: <base64 encoded cert>
#   tls.key: <base64 encoded key>
# type: kubernetes.io/tls
